# agentica-gateway

./: Dockerfile  README.md  a.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
Desktop/: a.py
examples/: scheduled_demo.py
src/: __init__.py  config.py  deps.py  main.py  models.py
src/channels/: feishu.py  gr.py
src/routes/: channels.py  chat.py  config.py  scheduler.py  ws.py
src/scheduler/: __init__.py  executor.py  models.py  schedule.py  tools.py  types.py
src/scheduler/service/: __init__.py  events.py  json_store.py  ops.py  service.py  state.py  store.py  timer.py
src/services/: agent_service.py
src/static/: app.js  index.html  style.css
tests/: example_daemon.py  test_agent_service.py  test_api.py  test_scheduler.py  test_scheduler_integration.py
桌面/: a.py
