[project]
name = "agentica-gateway"
version = "0.1.0"
description = "Agentica Gateway Service - Python OpenClaw"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "agentica>=0.2.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "lark-oapi>=1.0.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
webui = ["gradio>=4.0.0"]
telegram = ["python-telegram-bot>=20.0"]
discord = ["discord.py>=2.0"]
all = [
    "gradio>=4.0.0",
    "python-telegram-bot>=20.0",
    "discord.py>=2.0",
]

[project.scripts]
agentica-gateway = "src.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
